src/objects/ADvendio__RateCategory__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the Create &amp; Update Rates Manager, only active marked records will be available.</description>
        <inlineHelpText>In the Create &amp; Update Rates Manager, only active marked records will be available.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Rate Category</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>